# Theatrical-Players-Refactoring-Kata

rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  statement_data.rs  types.rs
rust/tests/: test.rs
