[package]
name = "theatrical_players"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
currency_rs = "1.3.0"
insta = "1.35.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
